--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -44,11 +44,11 @@
 					<div class="card">
 						<div class="card-body">
 							<h5 class="card-title">Use Cases</h5>
-							<p style="margin-bottom: 0;"><span style='font-weight: 675;'>POST /api/nation</span> Return JSON with nationality probability for name <a href="http://127.0.0.1:5000/api/nation" class="card-link">http://127.0.0.1:5000/api/nation</a></p>
+							<p style="margin-bottom: 0;"><span style='font-weight: 675;'>POST /api/nation</span> Return JSON with nationality probability for name <a href="https://flask-name-api.herokuapp.com/api/nation" class="card-link">https://flask-name-api.herokuapp.com/api/nation</a></p>
 							<p style="font-style: italic;">{"name": "Antoine"}</p> 
-							<p style="margin-bottom: 0;"><span style='font-weight: 675;'>POST /api/age</span> Return JSON with age probability for name <a href="http://127.0.0.1:5000/api/age" class="card-link">http://127.0.0.1:5000/api/age</a></p>
+							<p style="margin-bottom: 0;"><span style='font-weight: 675;'>POST /api/age</span> Return JSON with age probability for name <a href="https://flask-name-api.herokuapp.com/api/age" class="card-link">https://flask-name-api.herokuapp.com/api/age</a></p>
 							<p style="font-style: italic;">{"name": "Antoine"}</p> 
-							<p style="margin-bottom: 0;"><span style='font-weight: 675;'>POST /api/gender</span> Return JSON with gender probability for name <a href="http://127.0.0.1:5000/api/gender" class="card-link">http://127.0.0.1:5000/api/gender</a></p>
+							<p style="margin-bottom: 0;"><span style='font-weight: 675;'>POST /api/gender</span> Return JSON with gender probability for name <a href="https://flask-name-api.herokuapp.com/api/gender" class="card-link">https://flask-name-api.herokuapp.com/api/gender</a></p>
 							<p style="font-style: italic;">{"name": "Antoine"}</p> 
 						</div>
 					</div>
